练习记录初步

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   #购物车
   provider: ^6.0.0
 # 日期时间处理
-  intl: ^0.17.0
+  intl: ^0.18.0
 
   #设置http代理
   http_proxy_override: ^1.0.0
@@ -107,6 +107,7 @@ dependencies:
   sleek_circular_slider: ^2.0.1
   syncfusion_flutter_sliders: ^20.4.51
   syncfusion_flutter_core: ^20.4.52
+  table_calendar: ^3.0.9
 
 
 dev_dependencies:
@@ -173,232 +174,235 @@ flutter:
   assets:
     # assets-generator-begin
     # images/*
-    - images/article_collect_default.png
-    - images/article_collect_press.png
-    - images/article_listen_derfault.png
-    - images/article_listen_pause.png
-    - images/article_listen_play.png
-    - images/article_listen_press.png
-    - images/article_man_play.png
-    - images/article_share.png
-    - images/article_torid_notice.png
-    - images/article_woman_play.png
-    - images/bg_update_top.png
-    - images/choice_correct.png
-    - images/choice_error.png
-    - images/class_fun_0.png
-    - images/class_fun_1.png
-    - images/class_fun_2.png
-    - images/class_fun_3.png
-    - images/class_fun_4.png
-    - images/class_qrcode.png
-    - images/collec_prac_icon.png
-    - images/collec_words_error.png
-    - images/collec_word_icon.png
-    - images/error_to_correct.png
-    - images/error_to_correct_over.png
-    - images/home_search.png
-    - images/icon_back.png
-    - images/icon_back_black.png
-    - images/icon_back_blue.png
-    - images/icon_close.png
-    - images/icon_close_round_black.png
-    - images/icon_home_me_default_head.png
-    - images/icon_intensive_listening_loop_no.png
-    - images/icon_intensive_listening_loop_no_clicked.png
-    - images/icon_intensive_listening_loop_yes.png
-    - images/icon_intensive_listening_loop_yes_clicked.png
-    - images/icon_intensive_listening_show_word_no.png
-    - images/icon_intensive_listening_show_word_no_clicked.png
-    - images/icon_intensive_listening_show_word_yes.png
-    - images/icon_intensive_listening_show_word_yes_clicked.png
-    - images/icon_intensive_listening_translate_no.png
-    - images/icon_intensive_listening_translate_no_clicked.png
-    - images/icon_intensive_listening_translate_no_not_enabled.png
-    - images/icon_intensive_listening_translate_yes.png
-    - images/icon_intensive_listening_translate_yes_clicked.png
-    - images/icon_intensive_listening_translate_yes_not_enabled.png
-    - images/icon_player_after_play.png
-    - images/icon_player_after_play_clicked.png
-    - images/icon_player_befor_play.png
-    - images/icon_player_befor_play_clicked.png
-    - images/icon_player_pause.png
-    - images/icon_player_pause_clicked.png
-    - images/icon_player_play.png
-    - images/icon_player_play_clicked.png
-    - images/icon_tab1_normal.png
-    - images/icon_tab1_pressed.png
-    - images/icon_tab2_normal.png
-    - images/icon_tab2_pressed.png
-    - images/icon_tab3_normal.png
-    - images/icon_tab3_pressed.png
-    - images/icon_tab4_normal.png
-    - images/icon_tab4_pressed.png
-    - images/icon_to_next.png
-    - images/icon_transmission_speed_05.png
-    - images/icon_transmission_speed_05_clicked.png
-    - images/icon_transmission_speed_05_selected.png
-    - images/icon_transmission_speed_08.png
-    - images/icon_transmission_speed_08_clicked.png
-    - images/icon_transmission_speed_08_selected.png
-    - images/icon_transmission_speed_10.png
-    - images/icon_transmission_speed_10_clicked.png
-    - images/icon_transmission_speed_10_selected.png
-    - images/icon_transmission_speed_12.png
-    - images/icon_transmission_speed_12_clicked.png
-    - images/icon_transmission_speed_12_selected.png
-    - images/icon_transmission_speed_15.png
-    - images/icon_transmission_speed_15_clicked.png
-    - images/icon_transmission_speed_15_selected.png
-    - images/icon_transmission_speed_20.png
-    - images/icon_transmission_speed_20_clicked.png
-    - images/icon_transmission_speed_20_selected.png
-    - images/img.png
-    - images/index_ad.png
-    - images/index_class_more.png
-    - images/index_class_new.png
-    - images/index_class_thumb1.png
-    - images/index_class_thumb2.png
-    - images/index_collection_words.png
-    - images/index_day_word.png
-    - images/index_icon_1.png
-    - images/index_icon_10.png
-    - images/index_icon_2.png
-    - images/index_icon_3.png
-    - images/index_icon_4.png
-    - images/index_icon_5.png
-    - images/index_icon_6.png
-    - images/index_icon_7.png
-    - images/index_icon_8.png
-    - images/index_icon_9.png
-    - images/index_icon_play.png
-    - images/index_msg.png
-    - images/index_scan.png
-    - images/index_search.png
-    - images/index_teacher_icon1.png
-    - images/index_teacher_icon2.png
-    - images/index_today_todo.png
-    - images/item_play.png
-    - images/iv_no_show.png
-    - images/launch_logo.png
-    - images/listenig_last_icon.png
-    - images/login_agree_default.png
-    - images/login_agree_selected.png
-    - images/login_eye_close.png
-    - images/login_eye_open.png
-    - images/login_logo_top.png
-    - images/login_role_student.png
-    - images/login_role_teacher.png
-    - images/login_top_bg.png
-    - images/make1.jpg
-    - images/make2.jpg
-    - images/my_icon_coupon.png
-    - images/my_icon_help.png
-    - images/my_icon_order.png
-    - images/my_icon_right_arrow.png
-    - images/my_icon_setting.png
-    - images/my_icon_share.png
-    - images/my_top_bg.png
-    - images/next_three_icon.png
-    - images/num_index0.png
-    - images/num_index1.png
-    - images/num_index2.png
-    - images/num_index3.png
-    - images/num_index4.png
-    - images/num_index5.png
-    - images/num_index6.png
-    - images/num_index7.png
-    - images/player_practise_pause.png
-    - images/player_practise_play.png
-    - images/player_practise_slide.png
-    - images/practice_black_bg.png
-    - images/practice_gold_top.png
-    - images/practise_count_time_icon.png
-    - images/practise_next_question_enable.png
-    - images/practise_next_question_unable.png
-    - images/practise_pre_question_enable.png
-    - images/practise_pre_question_unable.png
-    - images/reading_default.png
-    - images/result_answer_card_tips.png
-    - images/result_favor.png
-    - images/result_time_tips.png
-    - images/result_unfavor.png
     - images/result_vector_tips.png
-    - images/review_favor_question_bg.png
-    - images/review_favor_question_icon.png
-    - images/review_favor_words_icon.png
-    - images/review_jump_practise.png
-    - images/review_practise_history.png
-    - images/review_reading_tag.png
-    - images/review_top_bg.png
-    - images/review_wrong_question_item.png
+    - images/article_collect_default.png
+    - images/torid_right.png
+    - images/writing_commit_button.png
+    - images/my_top_bg.png
+    - images/weekly_item_eye.png
     - images/shop_address_location_icon.png
-    - images/shop_car_num_icon.png
-    - images/shop_image_logo_test.png
-    - images/splash.png
-    - images/splash_bg.png
-    - images/splash_bottom_logo.png
-    - images/splash_center_image.png
+    - images/weekly_de_browse.png
+    - images/index_collection_words.png
+    - images/icon_intensive_listening_translate_yes_clicked.png
+    - images/torid_five_hide.png
+    - images/torid_tixing.png
+    - images/torid_close.png
+    - images/icon_transmission_speed_15_selected.png
+    - images/icon_intensive_listening_loop_no_clicked.png
+    - images/torid_one_show.png
+    - images/icon_transmission_speed_12_selected.png
+    - images/login_agree_default.png
+    - images/weekly_item_bg0.png
+    - images/xunfei.jpeg
+    - images/player_practise_play.png
+    - images/torid_second.png
+    - images/icon_close.png
+    - images/test_pause.png
+    - images/weekly_item_bg1.png
+    - images/login_role_student.png
+    - images/choice_correct.png
+    - images/player_practise_slide.png
+    - images/torid_three_show.png
+    - images/icon_close_round_black.png
+    - images/icon_tab3_normal.png
+    - images/index_class_new.png
+    - images/make2.jpg
+    - images/icon_back.png
+    - images/icon_intensive_listening_show_word_yes.png
+    - images/icon_intensive_listening_translate_no.png
+    - images/index_teacher_icon1.png
+    - images/icon_transmission_speed_20.png
+    - images/weekly_item_shadow.png
+    - images/icon_transmission_speed_08.png
+    - images/student_notify.png
+    - images/review_favor_words_icon.png
+    - images/index_search.png
+    - images/index_scan.png
+    - images/result_time_tips.png
+    - images/torid_top.png
+    - images/make1.jpg
+    - images/review_jump_practise.png
+    - images/index_teacher_icon2.png
+    - images/login_eye_open.png
+    - images/my_icon_help.png
+    - images/next_three_icon.png
+    - images/torid_four_show.png
+    - images/teacher_day_words_bg.png
+    - images/article_man_play.png
+    - images/my_icon_share.png
+    - images/student_index_3.png
+    - images/torid_eye_hide.png
+    - images/writing_look_botton.png
+    - images/practice_gold_top.png
+    - images/index_icon_8.png
+    - images/review_wrong_question_item.png
+    - images/article_collect_press.png
+    - images/xunfei_english.png
+    - images/icon_transmission_speed_05_clicked.png
+    - images/icon_home_me_default_head.png
+    - images/index_icon_9.png
+    - images/student_index_2.png
+    - images/error_to_correct.png
+    - images/wrong_question_item.png
+    - images/student_index_0.png
+    - images/teacher_scan.png
+    - images/icon_back_black.png
+    - images/review_practise_history.png
+    - images/practise_next_question_unable.png
+    - images/article_torid_notice.png
+    - images/student_info.png
+    - images/index_icon_10.png
+    - images/icon_intensive_listening_translate_no_clicked.png
+    - images/icon_transmission_speed_10_clicked.png
+    - images/index_msg.png
+    - images/icon_tab4_normal.png
     - images/splash_center_text.png
+    - images/student_index_1.png
+    - images/student_index_5.png
+    - images/collec_words_error.png
+    - images/torid_two_show.png
+    - images/login_logo_top.png
+    - images/result_answer_card_tips.png
+    - images/test_play.png
+    - images/item_play.png
+    - images/img.png
+    - images/player_practise_pause.png
     - images/splash_icon.png
     - images/splash_welcome_1.png
-    - images/splash_welcome_2.png
-    - images/student_day_words.png
-    - images/student_head.png
-    - images/student_index_0.png
-    - images/student_index_1.png
-    - images/student_index_2.png
-    - images/student_index_3.png
+    - images/history_jump_arrow.png
+    - images/icon_tab1_normal.png
+    - images/review_favor_question_icon.png
+    - images/login_eye_close.png
+    - images/icon_intensive_listening_loop_no.png
+    - images/icon_transmission_speed_15_clicked.png
     - images/student_index_4.png
-    - images/student_index_5.png
     - images/student_index_6.png
-    - images/student_info.png
-    - images/student_notify.png
-    - images/student_notify_parent.png
-    - images/teacher_class_top.png
-    - images/teacher_day_words.png
-    - images/teacher_day_words_bg.png
-    - images/teacher_home_btn_pop.png
-    - images/teacher_progress.png
-    - images/teacher_scan.png
-    - images/teacher_student_state.png
-    - images/teacher_words_bg.png
-    - images/test_pause.png
-    - images/test_play.png
-    - images/time_point_icon.png
-    - images/torid_bottom.png
-    - images/torid_close.png
-    - images/torid_eye_hide.png
-    - images/torid_five_hide.png
-    - images/torid_five_show.png
-    - images/torid_four_hide.png
-    - images/torid_four_show.png
-    - images/torid_left.png
-    - images/torid_one_hide.png
-    - images/torid_one_show.png
-    - images/torid_right.png
-    - images/torid_second.png
-    - images/torid_three_hide.png
-    - images/torid_three_show.png
-    - images/torid_tixing.png
-    - images/torid_top.png
-    - images/torid_two_hide.png
-    - images/torid_two_show.png
-    - images/tree_edit.png
-    - images/weekly_bg.png
-    - images/weekly_browse.png
-    - images/weekly_collect.png
-    - images/weekly_de_browse.png
-    - images/weekly_fabulous.png
-    - images/weekly_item_bg0.png
-    - images/weekly_item_bg1.png
-    - images/weekly_item_eye.png
-    - images/weekly_item_shadow.png
-    - images/welcome_icon.png
-    - images/welcome_txt.png
-    - images/writing_commit_button.png
-    - images/writing_look_botton.png
+    - images/article_share.png
     - images/writing_title_bg.png
-    - images/wrong_question_item.png
-    - images/xunfei.jpeg
-    - images/xunfei_english.png
+    - images/icon_player_pause_clicked.png
+    - images/teacher_home_btn_pop.png
+    - images/splash_center_image.png
+    - images/index_day_word.png
+    - images/splash_welcome_2.png
+    - images/icon_intensive_listening_show_word_yes_clicked.png
+    - images/icon_tab3_pressed.png
+    - images/practise_pre_question_unable.png
+    - images/choice_error.png
+    - images/review_reading_tag.png
+    - images/index_icon_1.png
+    - images/icon_tab2_normal.png
+    - images/student_day_words.png
+    - images/icon_transmission_speed_08_selected.png
+    - images/torid_four_hide.png
+    - images/practise_pre_question_enable.png
+    - images/icon_player_befor_play_clicked.png
+    - images/icon_intensive_listening_show_word_no_clicked.png
+    - images/icon_tab4_pressed.png
+    - images/article_woman_play.png
+    - images/login_role_teacher.png
+    - images/my_icon_coupon.png
+    - images/icon_player_play_clicked.png
+    - images/login_agree_selected.png
+    - images/icon_intensive_listening_translate_no_not_enabled.png
+    - images/icon_intensive_listening_loop_yes.png
+    - images/icon_intensive_listening_show_word_no.png
+    - images/student_notify_parent.png
+    - images/splash.png
+    - images/home_search.png
+    - images/index_icon_2.png
+    - images/listenig_last_icon.png
+    - images/welcome_icon.png
+    - images/icon_player_befor_play.png
+    - images/icon_transmission_speed_20_clicked.png
+    - images/practice_black_bg.png
+    - images/weekly_fabulous.png
+    - images/icon_transmission_speed_12_clicked.png
+    - images/index_icon_3.png
+    - images/icon_to_next.png
+    - images/weekly_collect.png
+    - images/article_listen_pause.png
+    - images/time_point_icon.png
+    - images/index_icon_7.png
+    - images/shop_image_logo_test.png
+    - images/torid_three_hide.png
+    - images/index_class_more.png
+    - images/bg_update_top.png
+    - images/teacher_class_top.png
+    - images/weekly_bg.png
+    - images/result_favor.png
+    - images/torid_one_hide.png
+    - images/practise_next_question_enable.png
+    - images/index_icon_6.png
+    - images/result_unfavor.png
+    - images/history_pre_month.png
+    - images/index_today_todo.png
+    - images/article_listen_play.png
+    - images/collec_prac_icon.png
+    - images/icon_intensive_listening_translate_yes.png
+    - images/index_icon_4.png
+    - images/iv_no_show.png
+    - images/torid_five_show.png
+    - images/my_icon_order.png
+    - images/index_icon_5.png
+    - images/icon_player_after_play_clicked.png
+    - images/icon_tab1_pressed.png
+    - images/icon_player_pause.png
+    - images/num_index6.png
+    - images/my_icon_setting.png
+    - images/icon_tab2_pressed.png
+    - images/teacher_progress.png
+    - images/icon_transmission_speed_20_selected.png
+    - images/icon_intensive_listening_loop_yes_clicked.png
+    - images/icon_transmission_speed_12.png
+    - images/reading_default.png
+    - images/login_top_bg.png
+    - images/index_class_thumb1.png
+    - images/practise_count_time_icon.png
+    - images/error_to_correct_over.png
+    - images/num_index7.png
+    - images/teacher_words_bg.png
+    - images/icon_intensive_listening_translate_yes_not_enabled.png
+    - images/article_listen_derfault.png
+    - images/index_ad.png
+    - images/num_index5.png
+    - images/icon_transmission_speed_10.png
+    - images/splash_bottom_logo.png
+    - images/torid_two_hide.png
+    - images/icon_transmission_speed_08_clicked.png
+    - images/icon_transmission_speed_05.png
+    - images/class_fun_4.png
+    - images/launch_logo.png
+    - images/index_class_thumb2.png
+    - images/teacher_student_state.png
+    - images/num_index4.png
+    - images/review_favor_question_bg.png
+    - images/history_next_month.png
+    - images/num_index0.png
+    - images/collec_word_icon.png
+    - images/class_fun_0.png
+    - images/icon_player_after_play.png
+    - images/icon_transmission_speed_15.png
+    - images/welcome_txt.png
+    - images/index_icon_play.png
+    - images/article_listen_press.png
+    - images/shop_car_num_icon.png
+    - images/class_fun_1.png
+    - images/num_index1.png
+    - images/weekly_browse.png
+    - images/num_index3.png
+    - images/teacher_day_words.png
+    - images/torid_bottom.png
+    - images/torid_left.png
+    - images/icon_back_blue.png
+    - images/icon_transmission_speed_10_selected.png
+    - images/class_fun_3.png
+    - images/tree_edit.png
+    - images/class_qrcode.png
+    - images/icon_player_play.png
+    - images/my_icon_right_arrow.png
+    - images/splash_bg.png
+    - images/class_fun_2.png
+    - images/review_top_bg.png
+    - images/num_index2.png
+    - images/icon_transmission_speed_05_selected.png
+    - images/student_head.png
