--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -353,6 +353,10 @@ flutter:
     - images/review_reading_tag.png
     - images/review_top_bg.png
     - images/review_wrong_question_item.png
+    - images/scan_result_back15.png
+    - images/scan_result_broadcast.png
+    - images/scan_result_fast15.png
+    - images/scan_result_suspend.png
     - images/shop_address_location_icon.png
     - images/shop_car_num_icon.png
     - images/shop_image_logo_test.png
