--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -397,6 +397,7 @@ flutter:
     - images/scan_result_broadcast.png
     - images/scan_result_fast15.png
     - images/scan_result_suspend.png
+    - images/search_place_ic.png
     - images/shop_address_location_icon.png
     - images/shop_car_num_icon.png
     - images/shop_image_logo_test.png
