--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -356,6 +356,7 @@ flutter:
     - images/welcome_icon.png
     - images/icon_player_befor_play.png
     - images/icon_transmission_speed_20_clicked.png
+    - images/school_report_right_arrow.png
     - images/practice_black_bg.png
     - images/weekly_fabulous.png
     - images/icon_transmission_speed_12_clicked.png
