--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -349,6 +349,14 @@ flutter:
     - images/login_top_bg.png
     - images/make1.jpg
     - images/make2.jpg
+    - images/mine_about_us.png
+    - images/mine_advice.png
+    - images/mine_appraise.png
+    - images/mine_class.png
+    - images/mine_history_work.png
+    - images/mine_order.png
+    - images/mine_phone.png
+    - images/mine_setting.png
     - images/my_icon_coupon.png
     - images/my_icon_help.png
     - images/my_icon_order.png
