--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   event_bus: ^2.0.0
   shared_preferences: ^2.0.7
   flutter_pickers: ^2.1.1
+  package_info_plus: ^3.1.0
   image: ^3.0.1
   # webSocket 连接
   web_socket_channel: ^2.2.0
