--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -32,6 +32,12 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>“英语周报”想访问您的麦克风</string>
+    <key>NSCameraUsageDescription</key>
+    <string>“英语周报”想访问您的相机</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>“英语周报”想访问您的相册</string>
 	<key>UIStatusBarHidden</key>
 	<false/>
 	<key>UISupportedInterfaceOrientations</key>
