--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>数组英语</string>
+	<string>数字英语</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -33,11 +33,11 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
     <key>NSMicrophoneUsageDescription</key>
-    <string>“数组英语”想访问您的麦克风</string>
+    <string>“数字英语”想访问您的麦克风</string>
     <key>NSCameraUsageDescription</key>
-    <string>“数组英语”想访问您的相机</string>
+    <string>“数字英语”想访问您的相机</string>
     <key>NSPhotoLibraryUsageDescription</key>
-    <string>“数组英语”想访问您的相册</string>
+    <string>“数字英语”想访问您的相册</string>
 	<key>UIStatusBarHidden</key>
 	<false/>
 	<key>UISupportedInterfaceOrientations</key>
