登录页密码框不能输入字符问题 我的ui调整

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -429,6 +429,7 @@ flutter:
     - images/icon_intensive_listening_translate_yes.png
     - images/index_icon_4.png
     - images/iv_no_show.png
+    - images/mine_grade_icon.png
     - images/home_search_ic.png
     - images/torid_five_show.png
     - images/class_report_second.png
