关于我们 产品介绍页面完成

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -252,6 +252,7 @@ flutter:
     - images/result_time_tips.png
     - images/torid_top.png
     - images/make1.jpg
+    - images/app_icon.png
     - images/review_jump_practise.png
     - images/index_teacher_icon2.png
     - images/writing_result_blow.png
