android证书添加 ios切为正式环境

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,8 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
+RELEASE_STOREFILE=../crazy_english.keystore
+RELEASE_STORE_PASSWORD =www123
+RELEASE_KEY_ALIAS=key0
+RELEASE_KEY_PASSWORD=www123
+android.injected.studio.version.check=false
