--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,6 +45,16 @@ android {
     compileSdkVersion flutterCompileSdkVersionCode.toInteger()
     ndkVersion flutter.ndkVersion
 
+    signingConfigs {
+        release {
+            //将打包信息放在../gradle.properties 中
+            storeFile file(RELEASE_STOREFILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -71,9 +81,11 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
+//            shrinkResources false
+        }
+        debug {
+            signingConfig signingConfigs.release
         }
     }
 }
