--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,6 @@ dependencies:
   image: ^4.0.13
   # webSocket 连接
   web_socket_channel: ^2.2.0
-
   image_picker: ^0.8.6
   image_gallery_saver: ^1.7.1 # 添加这一行
   # 状态管理
@@ -105,6 +104,7 @@ dependencies:
 
   #  flutter_inappwebview: ^5.7.2+3
   #  webview_flutter: ^4.0.1
+  webview_flutter: ^4.2.1
   flutter_inappwebview: ^6.0.0-beta.22
   video_player: ^2.4.10
   audioplayers: ^4.0.1
