--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -455,6 +455,7 @@ flutter:
     - images/splash_center_image.png
     - images/splash_center_text.png
     - images/splash_icon.png
+    - images/splash_logo.png
     - images/splash_welcome_1.png
     - images/splash_welcome_2.png
     - images/student_day_words.png
