--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -33,11 +33,11 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
     <key>NSMicrophoneUsageDescription</key>
-    <string>“数字英语”想访问您的麦克风</string>
+    <string>""</string>
     <key>NSCameraUsageDescription</key>
-    <string>“数字英语”想访问您的相机</string>
+    <string>此App将可访问您的相机以允许更改头像和给我们提供反馈</string>
     <key>NSPhotoLibraryUsageDescription</key>
-    <string>“数字英语”想访问您的相册</string>
+    <string>此App将可访问您的相册以允许更改头像和给我们提供反馈</string>
     <key>NSLocalNetworkUsageDescription</key>
     <string>“数字英语”想访问您的网络</string>
 	<key>UIStatusBarHidden</key>
