--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ app.*.map.json
 **/ios/Flutter/flutter_export_environment.sh
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
+**/ios/Package/
 
 # macOS
 **/macos/Flutter/GeneratedPluginRegistrant.swift
@@ -128,3 +129,4 @@ app.*.map.json
 **/linux/flutter/generated_plugin_registrant.cc
 **/linux/flutter/generated_plugin_registrant.h
 **/linux/flutter/ephemeral/.plugin_symlinks/
+build_ios.sh
