--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
 # 日期时间处理
   intl: ^0.18.0
   qr_code_scanner: ^1.0.1
-  qr_flutter: ^4.0.0
+  qr_flutter: 4.1.0
   #设置http代理
   http_proxy_override: ^1.0.0
   #GetX状态管理框架 https://pub.flutter-io.cn/packages/get
