小程序跳转

--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -4,5 +4,10 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:crazyenglishweekly.com</string>
+		<string>com.weekly.crazyenglish</string>
+	</array>
 </dict>
 </plist>
