--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -24,6 +24,46 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>alipays</string>
+        <string>weixin</string>
+        <string>weixinURLParamsAPI</string>
+        <string>wechat</string>
+        <string>weixinULAPI</string>
+        <string>tim</string>
+        <string>mqq</string>
+        <string>mqqapi</string>
+        <string>mqqbrowser</string>
+        <string>mttbrowser</string>
+        <string>mqqOpensdkSSoLogin</string>
+        <string>mqqopensdkapiV2</string>
+        <string>mqqopensdkapiV4</string>
+        <string>mqzone</string>
+        <string>mqzoneopensdk</string>
+        <string>mqzoneopensdkapi</string>
+        <string>mqzoneopensdkapi19</string>
+        <string>mqzoneopensdkapiV2</string>
+        <string>mqqapiwallet</string>
+        <string>mqqopensdkfriend</string>
+        <string>mqqopensdkavatar</string>
+        <string>mqqopensdkminiapp</string>
+        <string>mqqopensdkdataline</string>
+        <string>mqqgamebindinggroup</string>
+        <string>mqqopensdkgrouptribeshare</string>
+        <string>tencentapi.qq.reqContent</string>
+        <string>tencentapi.qzone.reqContent</string>
+        <string>mqqthirdappgroup</string>
+        <string>mqqopensdklaunchminiapp</string>
+        <string>mqqopensdkproxylogin</string>
+        <string>mqqopensdknopasteboard</string>
+        <string>mqqopensdkcheckauth</string>
+    </array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
