--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0.1+1001
+version: 1.0.1+101
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -114,7 +114,19 @@ dependencies:
   syncfusion_flutter_core: ^20.4.52
   table_calendar: ^3.0.9
   grouped_list: ^5.1.2
+  fluwx: 4.2.4+1
 
+fluwx:
+  app_id: wxf814fbeed5ba5291
+  # only debug in debug mode
+  android:
+  #      interrupt_wx_request: true # default is true
+  #      flutter_activity: MainActivity #Default to launch app's launcher
+  ios:
+    universal_link: https://app-download.crazyenglishweekly.com/
+  #    scene_delegate: true #default false
+  # payment is enabled by default
+  no_pay: true
 
 dev_dependencies:
   icons_launcher: ^2.1.0
