--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -8,6 +8,7 @@
 	<array>
 		<string>applinks:crazyenglishweekly.com</string>
 		<string>com.weekly.crazyenglish</string>
+		<string>applinks:app-download.crazyenglishweekly.com</string>
 	</array>
 </dict>
 </plist>
